# Matrix

./: CMakeLists.txt  README.md  matrix  matrix.cpp
algo_tests/: 973.txt  NxN  NxN.cpp  NxN.txt  big_test.cpp  outNxN.txt
algo_tests/py_test/: col.cpp  gen.cpp  gen_Cpp.txt  gen_m.txt  solve_det.py
lib/: matrix.hpp  test_gen.hpp
tests/: book.txt  tests_matrix  tests_matrix.cpp
tests/matrix_100x100/: 100m_forTest.txt  100x100.txt  after_3ng_form.txt  gen_100rand.cpp  gen_100x100  gen_100x100.cpp  out_m.txt  test_100  test_100.cpp  test_one  test_one.cpp
tests/matrix_5x5/: after_3ng_form.txt  matrix.txt  out_m.txt  out_mB.txt  test_max_in_row  test_max_in_row.cpp  test_one  test_one.cpp
unit_tests/: README.md  unit_tests.cpp
